<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.view.ui.settings.SettingsFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar_settings"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar_settings"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:navigationIcon="@drawable/ic_navigate_back"
            app:titleCentered="true"
            app:titleTextAppearance="@style/Toolbar.Title"
            tools:title="MovMent" />

    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/separator_topbar"
        android:layout_width="match_parent"
        android:layout_height="0.25dp"
        android:background="@color/grey_line"
        android:elevation="10dp"
        app:layout_constraintTop_toBottomOf="@+id/appbar_settings" />

    <TextView
        android:id="@+id/tv_settings_title"
        style="@style/TextAppearance.Material3.HeadlineSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/separator_topbar"
        tools:text="@string/tv_settings_title" />

    <TextView
        android:id="@+id/tv_en"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/switch_language"
        app:layout_constraintEnd_toStartOf="@id/switch_language"
        app:layout_constraintTop_toTopOf="@id/switch_language"
        tools:text="@string/loc_english" />

    <com.google.android.material.materialswitch.MaterialSwitch
        android:id="@+id/switch_language"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_settings_title" />

    <TextView
        android:id="@+id/tv_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/switch_language"
        app:layout_constraintStart_toEndOf="@id/switch_language"
        app:layout_constraintTop_toTopOf="@id/switch_language"
        tools:text="@string/loc_indonesian" />

    <TextView
        android:id="@+id/tv_light"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/switch_theme"
        app:layout_constraintEnd_toStartOf="@+id/switch_theme"
        app:layout_constraintTop_toTopOf="@+id/switch_theme"
        tools:text="@string/theme_light" />

    <com.google.android.material.materialswitch.MaterialSwitch
        android:id="@+id/switch_theme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="@+id/switch_language"
        app:layout_constraintStart_toStartOf="@+id/switch_language"
        app:layout_constraintTop_toBottomOf="@+id/switch_language" />

    <TextView
        android:id="@+id/tv_dark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/switch_theme"
        app:layout_constraintStart_toEndOf="@+id/switch_theme"
        app:layout_constraintTop_toTopOf="@+id/switch_theme"
        tools:text="@string/theme_dark" />

</androidx.constraintlayout.widget.ConstraintLayout>